--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@
 }
 
 body{
+    margin-top: 100px;
     background: #fff;
 	font-family:SegoeUIRegular;
 }
@@ -61,32 +62,90 @@ body{
         margin: 0px;
         padding: 0px;
 }
-
+.top-fixed {
+    background: #fff none repeat scroll 0 0;
+    min-height: 100px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2;
+    -webkit-box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.45);
+    -moz-box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.45);
+    box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.45);
+}
 /*start top menu*/
-    nav{
-        padding-top: 25px;
-    }
-    nav ul li{
-        display: inline-block;
-    }
-    nav a{
-        color: #424241;
-        font-size: 1.7em;
-		font-family:SegoeUISemiBold;
-        text-decoration: none;
-    }
-    nav ul li:nth-child(2){
-        padding-left:15px;
-        padding-right: 15px;
-    }
-    nav .selected {
-        border-bottom: 3px solid #008b9e;
-    }
-    nav a:hover{
-        border-bottom: 3px solid #008b9e;
-        text-decoration: none;
-    }
-
+nav{
+    padding-top: 25px;
+}
+nav ul li{
+     display: inline-block;
+}
+ nav a{
+    color: #424241;
+    font-size: 1.7em;
+	font-family:SegoeUISemiBold;
+    text-decoration: none;
+}
+nav ul li:nth-child(2){
+    padding-left:15px;
+    padding-right: 15px;
+}
+nav .selected {
+     border-bottom: 3px solid #008b9e;
+}
+ nav a:hover{
+     border-bottom: 3px solid #008b9e;
+    text-decoration: none;
+}
+#menu-show{
+     display: none;
+ }
+.show-menu {
+    margin-top: 5px;
+    -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+    -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+    box-shadow:inset 0px 1px 0px 0px #ffffff;
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
+    background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
+    background-color:#ededed;
+    -webkit-border-top-left-radius:6px;
+    -moz-border-radius-topleft:6px;
+    border-top-left-radius:6px;
+    -webkit-border-top-right-radius:6px;
+    -moz-border-radius-topright:6px;
+    border-top-right-radius:6px;
+    -webkit-border-bottom-right-radius:6px;
+    -moz-border-radius-bottomright:6px;
+    border-bottom-right-radius:6px;
+    -webkit-border-bottom-left-radius:6px;
+    -moz-border-radius-bottomleft:6px;
+    border-bottom-left-radius:6px;
+    text-indent:0;
+    border:1px solid #dcdcdc;
+    display:inline-block;
+    color:#777777;
+    font-family:Georgia;
+    font-size:1em;
+    font-weight:bold;
+    font-style:normal;
+    height:25px;
+    line-height:1em;
+    width:100px;
+    text-decoration:none;
+    text-align:center;
+    text-shadow:1px 1px 0px #ffffff;
+}
+.show-menu:hover {
+    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
+    background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
+    background-color:#dfdfdf;
+}.show-menu:active {
+    position:relative;
+    top:1px;
+}
+/* This button was generated using CSSButtonGenerator.com */
 /*end top menu*/
 .top-phone-section {
     padding-top: 18px;
@@ -296,10 +355,59 @@ body{
     height: 67px;
 	box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.7);
 }
+.feed-back-bottom{
+    margin-bottom:30px;
+    margin-top:30px;
+}
+.about{
+    color:#424241;
+    text-align:left;
+}
+footer{
+    margin-top:30px;
+}
+.link-section {
+    list-style: outside none none;
+}
+.link-section li {
+   display:inline-block;
+   padding-left:15px;
+   padding-right:15px;
+}
+.coop{
+    color:#424241;
+}
+.social-ico{
+    list-style:none;
+}
+.social-ico li{
+    display:inline-block;
+}
+.social-ico a{
+    height: 48px;
+    width: 48px;
+    display: inline-block;
+}
+.vk{
+    background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 0 0;
+}
+.vk:hover{
+    background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 0 100%;
+}
+.fb{
+    background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 51% 0;
+}
+.inst{
+    background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 101% 0%;
+}
+.fb:hover{
+    background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 51% 100%;
+}
+.inst:hover{
+    background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 101% 100%;
+}
 /***dop media query form other display**/
 @media (min-width: 1200px) {
-
-
     
 }
 @media  (min-width: 992px) and (max-width: 1200px) {
@@ -310,9 +418,7 @@ body{
         color: #424241;
         font-size: 0.8em;
     }
-	.logo{
-		
-	}
+
 }
 
 @media  (max-width: 992px) {
@@ -325,6 +431,7 @@ body{
     nav{
         padding-top: 0px;
         margin-bottom: 20px;
+        text-align: center;
     }
     .top-section{
         margin-bottom: 20px;
@@ -339,74 +446,74 @@ body{
 		width:60%;
 		margin-top:20px;
 	}
+    .logo{
+        width: 160px;
+    }
+    nav ul li{
+        display: block;
+    }
+    #menu-top{
+        display: none;
+    }
+    #menu-show{
+        display: inline-block;
+    }
+    nav {
+        margin-bottom: 0px;
+    }
+    .logo-section > a {
+         display: block;
+         margin-top: 10px;
+    }
+    .top-phone-section {
+        padding-top: 5px;
+    }
+    .top-phone-section{
+        display: none;
+    }
+    .top-fixed{
+            min-height: 50px;
+    }
+    .top-section{
+            min-height: 50px;
+            margin-bottom: 5px;
+    }
+
 }
 
-.feed-back-bottom{
-	margin-bottom:30px;
-	margin-top:30px;
-}
-.about{
-	color:#424241;
-	text-align:left;
-}
-footer{
-	margin-top:30px;
-}
-.link-section {
-    list-style: outside none none;
-}
-.link-section li {
-   display:inline-block;
-   padding-left:15px;
-   padding-right:15px;
-}
-.coop{
-	color:#424241;
-}
-.social-ico{
-	list-style:none;
-}
-.social-ico li{
-	display:inline-block;
-}
-.social-ico a{
-	height: 48px;
-    width: 48px;
-    display: inline-block;
-}
-.vk{
-	background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 0 0;
-}
-.vk:hover{
-	background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 0 100%;
-}
-.fb{
-	background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 51% 0;
-}
-.inst{
-	background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 101% 0%;
-}
-.fb:hover{
-	background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 51% 100%;
-}
-.inst:hover{
-	background: rgba(0, 0, 0, 0) url("/images/social-ico.png") no-repeat scroll 101% 100%;
-}
+
 @media  (min-width: 768px) and (max-width: 992px) {
-	
+	.top-phone-section ul li{
+        display: inline-block;
+        margin-right: 5px;
+        margin-left: 5px;
+    }
 }
 
 @media  (max-width: 768px) {
    	.feed-b-btn{
 		font-size:1.4em;
 	}
+    .top-phone-section{
+        display: none;
+    }
+    .top-section{
+        margin: 0px;
+    }
+    .top-fixed{
+            min-height: 50px;
+    }
+    .top-section{
+            min-height: 50px;
+            margin-bottom: 5px;
+    }
 }
 @media  (max-width: 480px) {
     nav a {
         font-size: 1.3em;
     }
     .logo{
-        width: 70%;
+        width: 100px;
     }
 	.feed-b-btn{
 		font-size:1.4em;
@@ -420,7 +527,19 @@ footer{
     .see-detail{
         bottom:0px;
     }
-	
+	.top-phone-section {
+        display: none;
+    }
+    .top-fixed{
+            min-height: 50px;
+    }
+    .top-section{
+            min-height: 50px;
+            margin-bottom: 5px;
+    }
+    body{
+        margin-top: 50px;
+    }
 }
 
 /*******extension bootsrap css********/
